--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,10 @@
 <div class="min-h-screen bg-gray-900 text-white flex flex-col">
-  <!-- Navbar -->
-  <nav class="bg-gray-800 p-4 flex justify-between items-center">
-    <div class="text-lg font-semibold flex items-center">
-      <span class="mr-2">🔗</span>
-      <span class="text-blue-400">Github Finder</span>
-    </div>
-    <div>
-      <a href="#" class="text-gray-400 hover:text-white mx-2">Home</a>
-      <a href="#" class="text-gray-400 hover:text-white mx-2">About</a>
-    </div>
-  </nav>
+  <!-- Navbar Component -->
+  <app-header></app-header>
 
-  <!-- Search Box -->
-  <div class="flex flex-1 justify-center items-center">
-    <div class="w-full max-w-lg">
-      <div class="flex">
-        <input type="text" placeholder="Search" 
-               class="w-full p-3 rounded-l-md bg-gray-200 text-gray-800 outline-none" />
-        <button class="px-6 bg-gray-700 text-white rounded-r-md">GO</button>
-      </div>
-    </div>
+  <!-- Search Box Component -->
+  <div class="flex flex-1 items-center justify-center">
+    <app-search-box (searchEvent)="handleSearch($event)"></app-search-box>
   </div>
 
   <!-- Footer -->
