--- a/src/app/components/search-box/search-box.component.html
+++ b/src/app/components/search-box/search-box.component.html
@@ -1,11 +1,11 @@
 <div class="flex justify-center items-center">
   <div class="w-full max-w-lg">
     <div class="flex">
-      <input 
+      <input #searchInput
         type="text" 
         placeholder="Search" 
         class="w-full p-3 rounded-l-md bg-gray-200 text-gray-800 outline-none"
-        
+
       />
       <button 
         class="px-6 bg-gray-700 text-white rounded-r-md"
