update: search multiple user

--- a/src/app/components/user-items/user-items.component.html
+++ b/src/app/components/user-items/user-items.component.html
@@ -4,9 +4,9 @@
     
     <!-- User Info -->
     <div class="ml-4 text-white">
-      <p class="text-lg font-semibold">{{ userData()?.name || userData()?.login }}</p>
+      <p class="text-lg font-semibold">{{ userData()?.login }}</p>
       <a [href]="userData()?.html_url" target="_blank" class="text-sm text-gray-400 hover:text-blue-400">
-        Visit Profile
+        View Profile
       </a>
     </div>
   </div>
