feat: deploy to vercel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gray-900 text-white flex flex-col">
+<div class="min-h-screen">
   <!-- Navbar Component -->
   <app-header></app-header>
 
@@ -8,8 +8,8 @@
   </div>
 
   <!-- Footer -->
-  <footer class="py-4 text-center text-gray-500">
-    <span class="block text-2xl">#</span>
+  <footer class="footer">
+    <span>#</span>
     <p>Copyright © 2025 All rights reserved</p>
   </footer>
 </div>
