--- a/src/app/components/search-box/search-box.component.html
+++ b/src/app/components/search-box/search-box.component.html
@@ -1,17 +1,8 @@
-<div class="flex justify-center items-center">
-  <div class="w-full max-w-lg">
+<div class="search-container">
+  <div class="search-box">
     <div class="flex">
-      <input #searchInput
-        type="text" 
-        placeholder="Search" 
-        class="w-full p-3 rounded-l-md bg-gray-200 text-gray-800 outline-none"
-
-      />
-      <button 
-        class="px-6 bg-gray-700 text-white rounded-r-md"
-        (click)="onSearch()">
-        GO
-      </button>
+      <input #searchInput type="text" placeholder="Search"/>
+      <button (click)="onSearch()">GO</button>
     </div>
   </div>
 </div>
