--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,10 @@
-<nav class="bg-gray-800 p-4 flex justify-between items-center">
-    <div class="text-lg font-semibold flex items-center">
-      <span class="mr-2">🔗</span>
-      <span class="text-blue-400">Github Finder</span>
-    </div>
-    <div>
-      <a href="#" class="text-gray-400 hover:text-white mx-2">Home</a>
-      <a href="#" class="text-gray-400 hover:text-white mx-2">About</a>
-    </div>
-  </nav>
-  
+<nav class="navbar">
+  <div class="brand">
+    <span>🔗</span>
+    <span style="color: #63b3ed;">Github Finder</span>
+  </div>
+  <div>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+  </div>
+</nav>
