--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
   <!-- Search Box Component -->
   <div class="flex flex-1 items-center justify-center">
-    <app-home></app-home>
+    <router-outlet></router-outlet>
   </div>
 
   <!-- Footer -->
