--- a/src/app/components/user-items/user-items.component.html
+++ b/src/app/components/user-items/user-items.component.html
@@ -5,6 +5,6 @@
   <!-- User Info -->
   <div class="info">
     <p>{{ userData()?.login }}</p>
-    <a [href]="userData()?.html_url" target="_blank">View Profile</a>
+    <button (click)="viewProfile()">View Profile</button>
   </div>
 </div>
