--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -41,5 +41,28 @@
         </div>
       </div>
     </div>
+
+    <!-- Pagination Controls -->
+  <div class="pagination-controls">
+    <button 
+      class="pagination-btn"
+      (click)="previousPage()" 
+      [disabled]="currentPage === 1"
+    >
+      Previous
+    </button>
+    
+    <span class="page-info">
+      Page {{ currentPage }} of {{ totalPages }}
+    </span>
+    
+    <button 
+      class="pagination-btn"
+      (click)="nextPage()" 
+      [disabled]="currentPage === totalPages"
+    >
+      Next
+    </button>
   </div>
+</div>
   
